# chatgpt_job

./: .gitignore  README.md  chatgpt.py  config_loader.py  env.example.yaml  google_drive.py  linkedin_job_desc.py  linkedin_job_list.py  logger_config.py  main.py  pyproject.toml  requirements.txt  results.json
