[tool.poetry]
name = "chatgpt-job"
version = "0.1.0"
description = "This repo is to help generate the needed documentation for job applications"
authors = ["cwolfe007 <caleb.wolfe.public@gmail.com>"]
readme = "README.md"
packages = [{include = "chatgpt_job"}]

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
default = false
secondary = true

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.6"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
async-timeout = "4.0.3"
attrs = "23.1.0"
blinker = "1.6.2"
cachetools = "5.3.2"
certifi = "2022.6.15"
chardet = "3.0.4"
charset-normalizer = "3.3.0"
click = "8.1.7"
distro = "1.8.0"
exceptiongroup = "1.1.3"
flask = "3.0.0"
frozenlist = "1.4.0"
google-api-core = "2.14.0"
google-api-python-client = "2.107.0"
google-auth = "2.23.4"
google-auth-httplib2 = "0.1.1"
google-auth-oauthlib = "1.1.0"
googleapis-common-protos = "1.61.0"
h11 = "0.14.0"
httpcore = "1.0.1"
httplib2 = "0.22.0"
httpx = "0.25.1"
idna = "2.8"
iniconfig = "2.0.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
multidict = "6.0.4"
oauthlib = "3.2.2"
openai = "1.2.0"
pluggy = "1.3.0"
protobuf = "4.25.0"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
pyparsing = "3.1.1"
pytest = "7.4.2"
regex = "2023.10.3"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
rsa = "4.9"
sniffio = "1.3.0"
tiktoken = "0.5.2"
tomli = "2.0.1"
tqdm = "4.66.1"
typing-extensions = "4.8.0"
uritemplate = "4.1.1"
urllib3 = "1.25.11"
werkzeug = "3.0.0"
yarl = "1.9.2"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
